// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`tsc --showConfig ./presets/base.json 1`] = `
"{
    "compilerOptions": {
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "erasableSyntaxOnly": true,
        "exactOptionalPropertyTypes": true,
        "incremental": true,
        "lib": [
            "esnext"
        ],
        "module": "preserve",
        "moduleDetection": "force",
        "noEmit": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "noImplicitOverride": true,
        "resolveJsonModule": true,
        "skipLibCheck": true,
        "verbatimModuleSyntax": true,
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "files": [
        "./bundler/src/fixtures.ts",
        "./tsc/src/fixtures.ts"
    ],
    "include": [
        "./**/*",
        "./**/.*",
        "./**/.*/**/*",
        "./**/.*/**/.*"
    ]
}"
`;

exports[`tsc --showConfig ./presets/bundler/base.json 1`] = `
"{
    "compilerOptions": {
        "allowJs": true,
        "allowImportingTsExtensions": true,
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "checkJs": true,
        "erasableSyntaxOnly": true,
        "exactOptionalPropertyTypes": true,
        "incremental": true,
        "lib": [
            "esnext"
        ],
        "module": "preserve",
        "moduleDetection": "force",
        "noEmit": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "noImplicitOverride": true,
        "resolveJsonModule": true,
        "skipLibCheck": true,
        "verbatimModuleSyntax": true,
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "files": [
        "./src/fixtures.ts"
    ],
    "include": [
        "./**/*",
        "./**/.*",
        "./**/.*/**/*",
        "./**/.*/**/.*"
    ]
}"
`;

exports[`tsc --showConfig ./presets/tsc/base.json 1`] = `
"{
    "compilerOptions": {
        "allowUnreachableCode": false,
        "allowUnusedLabels": false,
        "declaration": true,
        "declarationMap": true,
        "erasableSyntaxOnly": true,
        "exactOptionalPropertyTypes": true,
        "isolatedDeclarations": true,
        "incremental": true,
        "lib": [
            "esnext"
        ],
        "module": "nodenext",
        "moduleDetection": "force",
        "noEmit": true,
        "noFallthroughCasesInSwitch": true,
        "noImplicitReturns": true,
        "noPropertyAccessFromIndexSignature": true,
        "noUncheckedIndexedAccess": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "noImplicitOverride": true,
        "outDir": "./dist",
        "resolveJsonModule": true,
        "skipLibCheck": true,
        "verbatimModuleSyntax": true,
        "moduleResolution": "nodenext",
        "isolatedModules": true,
        "preserveConstEnums": true
    },
    "files": [
        "./src/fixtures.ts"
    ],
    "include": [
        "./src/**/*",
        "./src/**/.*",
        "./src/**/.*/**/*",
        "./src/**/.*/**/.*"
    ],
    "exclude": [
        "./dist"
    ]
}"
`;
